++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject 0.9.6
===============

* A bug in inheritable delColumn() that doesn't removes properties was fixed.

SQLObject 0.9.5
===============

Released 10 Mar 2008.

* Fixed a minor bug in SQLiteConnection.columnsFromSchema() - set dbName.

* A bug in delColumn() that removes all properties was fixed by recreating
  properties.

SQLObject 0.9.4
===============

Released 3 Mar 2008.

* Use list.reverse() in manager/command.py for Python 2.2 compatibility.

* Prevent MultipleJoin from removing the intermediate table if it was not
  created by the Join.

* Fixed a bug with no default when defaultSQL is defined for the column.

* Recognize POINT data type as string in PostgresConnection.columnsFromSchema().

SQLObject 0.9.3
===============

Released 10 Jan 2008.

* A number of changes ported from `SQLObject 0.7.10`_.

SQLObject 0.9.2
===============

Released 30 Oct 2007.

* Fixed a bug in Versioning - do not copy "alternateID" and "unique"
  attributes from the versioned table.

* Fixed a misspelled 'zerofill' option's name.

* Fixed bugs in SQLiteConnection.guessColumn().

* A number of changes ported from `SQLObject 0.7.9`_ and `SQLObject 0.8.6`_.

SQLObject 0.9.1
===============

Released 25 July 2007.

Bug Fixes
---------

* Fixed misspelled methods in col.py.

* A number of bugfixes ported from `SQLObject 0.7.8`_ and `SQLObject 0.8.5`_.

SQLObject 0.9.0
===============

Released 10 May 2007.

Features & Interface
--------------------

* Support for Python 2.2 has been declared obsolete.

* Removed actively deprecated attributes;
  lowered deprecation level for other attributes to be removed after 0.9.

* SQLite connection got columnsFromSchema(). Now all connections fully support
  fromDatabase. There are two version of columnsFromSchema() for SQLite -
  one parses the result of "SELECT sql FROM sqlite_master" and the other